--- a/app/views/borrowings/new.html.erb
+++ b/app/views/borrowings/new.html.erb
@@ -8,7 +8,7 @@
 
     <div>
         <%= form.label :borrowed_on, "Borrow Date" %>
-        <%= form.date_field :borrowed_on value: Date.today %>
+        <%= form.date_field :borrowed_on, value: Date.today %>
     </div>
 
     <%= form.submit "Borrow Book" %>
