--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,8 @@
-<h1>Library Books</h1>
+<div class="homePage">
 
+<h1 class="title">Library Books</h1>
+
+<div class="book dealings">
 <%= link_to 'Add New Book', new_book_path %>
 
 <ul>
@@ -9,12 +12,16 @@
         </li>
     <% end %>
 </ul>
+</div>
 
-<h3> Find Borrower History </h3>
+<div class="search">
+<h3 class="title"> Find Borrower History </h3>
 <%= form_with url: borrower_history_path, method: :get, local: true do |form| %>
     <div>
         <%= form.label :borrower_name, "Enter Borrower's Name" %>
         <%= form.text_field :borrower_name, required: true %>
-        <%= form.submit "Find Hostory" %>
+        <%= form.submit "Find History" %>
     </div>
 <%end%>
+</div>
+</div>
